--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,20 +1,23 @@
 {
   "compilerOptions": {
+    "target": "es2020",
+    "moduleResolution": "node",
+    "jsx": "react",
+    "strict": true,
+    "esModuleInterop": true,
     "declaration": true,
     "declarationDir": "dist/types",
-    "target": "es2018",
     "module": "esnext",
     "lib": [
       "dom",
       "esnext"
     ],
-    "moduleResolution": "node",
-    "jsx": "react",
-    "strict": true,
-    "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-    "outDir": "dist"
+    "outDir": "dist",
+    "types": [
+      "react"
+    ]
   },
   "include": [
     "src"
